Sat May  8 19:48:00 1993  Linus Tolke Y  (linus@bodil)

	* swedish-strings.el, english-strings.el (kom-tell-phrases): The
	  encouragement to change this variable is removed.

Wed May  5 04:47:30 1993  Linus Tolke Y  (linus@bodil)

	* async.el, commands1.el, commands2.el, completing-read.el,
	  edit-text.el, internal.el, lyskom-rest.el, prioritize.el
          (lyskom-message, lyskom-error): rewritten all the calls to
	  lyskom-message and lyskom-error with explicit format-strings.
	* parse.el, startup.el, lyskom-rest.el, vars.el (debug): rewritten
	  the debug-on-communications format. We now log the process.
	  We also log all lyskom-processes in the same debug-buffert, the
	  replies-buffer becomes visible if debugging.
	* startup.el (lyskom-clear-vars, lyskom): Rewritten the
	  login-procedure. 

Thu Apr 29 00:07:36 1993  Linus Tolke Y  (linus@bodil)

	* edit-text.el (lyskom-create-text-handler): Better error message.

	* commands1.el (lyskom-add-member-answer,
	  lyskom-add-member-answer-rd_prot): Better message when trying to
	  join a rd_protected conference.

Tue Apr 27 00:48:00 1993  Linus Tolke Y  (linus@bodil)

	* commands2.el, swedish-strings.el, english-strings.el
	  (have-to-be-in-conf) changed to have-to-be-in-conf-with-unread.

Mon Apr 26 21:25:25 1993  Linus Tolke Y  (linus@bodil)

	* commands2.el, lyskom-rest.el (kom-list-news, lyskom-list-news,
	  lyskom-prefetch-all-confs): kom-list-news now takes a prefix
	  argument.

	* async.el (lyskom-parse-async): Names can now contain %.
	  Extra text in the buffer when you change name.
	  Clientinformation added.

	* lyskom-rest.el, startup.el, Makefile: rewound to before the
	  testing with prefetch. Some bugs left fixed.

Wed Dec  2 11:32:35 1992  Linus Tolke Y  (linus@robin)

	* lyskom-rest.el (lyskom-message): The arguments to message are
	  format-string, arguments. Not string.

Mon Nov  9 00:15:04 1992  Linus Tolke Y  (linus@ruben)

	* startup.el (lyskom-clear-vars): lyskom-default-password shall